--- a/estilos.css
+++ b/estilos.css
@@ -162,8 +162,18 @@ nav #publicar_nav a
 	color: #A7A7A7;
 	font-size: 0.9em;
 }
+#contenido .item .datos_item .comentario_item
+{
+	background: #878787;
+	border-radius: 4px;
+	color: white;
+	padding: 4px; 
+	text-decoration: none;
+}
+
 #contenido .item .datos_item .guardar_item
 {
+	margin: 0 1em;
 	text-decoration: none;
 }
 #contenido .item .datos_item .guardar_item:after
@@ -172,11 +182,16 @@ nav #publicar_nav a
 	content: "\e602";
 	font-family: "icomoon";
 }
+#contenido .item .datos_item
+{
+	text-align: right;
+}
 #contenido .item .datos_item .tag_item
 {
 	background: #22BCE0;
 	border-radius: 0.5em;
 	color: white;
+	float: left;
 	padding: 0.2em 0.5em;
 	text-decoration: none;
 }
